--- a/frontend/quiz.html
+++ b/frontend/quiz.html
@@ -39,5 +39,7 @@
     </form>
     
 </body>
-<script src="./index.js" type="module"></script>
+<script src="./index.js" type="module">
+    console.log("hi")
+</script>
 </html>
